# ArmRobot-7DOF

./: README.md
new_cobot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
new_cobot_moveit/config/: cobot_nextup.ros2_control.xacro  cobot_nextup.srdf  cobot_nextup.urdf.xacro  gazebo_controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml
new_cobot_moveit/launch/: demo.launch.py  demo_gazebo.launch.py  demo_gazebo.launch.xml  gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
new_cobot_moveit/meshes/: link5.STL  link6.STL
new_cobot_moveit/src/: ee_velocity.cpp  multi_waypoint_cartesian.cpp
new_cobot_moveit/urdf/: cobot.gazebo.xacro  cobot.transmission.xacro  cobot_nextup.ros2_control.xacro  cobot_nextup.urdf.xacro  cobot_nextup_arm.urdf.xacro
